# nvapi-rs

./: Cargo.toml
hi/: Cargo.toml
hi/src/: display.rs  gpu.rs  lib.rs
src/: clock.rs  gpu.rs  lib.rs  pstate.rs  types.rs
sys/: Cargo.toml
sys/src/: dispcontrol.rs  handles.rs  i2c.rs  lib.rs  macros.rs  nvapi.rs  types.rs
sys/src/gpu/: display.rs
