[package]
name = "nvapi-hi"
version = "0.1.0"
authors = ["arcnmx"]

description = "NVIDIA NVAPI high level bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "http://arcnmx.github.io/nvapi-rs/nvapi_hi"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "../README.md"
license = "MIT"

[dependencies]
nvapi = { version = "^0.1.0", path = "../", default-features = false }
serde = { version = "^1.0.0", features = ["derive"], optional = true }

[features]
serde_types = ["serde", "nvapi/serde_types"]
default = ["serde_types"]
